src/FinancialForce Accounting/objects/TransactionReconciliationLineItem__c.object
<CustomObject>
    <description>Stores transaction reconciliation line item details.</description>
    <fields>
        <fullName>Panel__c</fullName>
        <label>Panel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>left</fullName>
                </value>
                <value>
                    <fullName>right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransactionReconciliation__c</fullName>
        <description>Parent Reconciliation number.</description>
        <label>Reconciliation Number</label>
        <referenceTo>TransactionReconciliation__c</referenceTo>
        <relationshipName>ReconciliationLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Reconciliation Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Reconciliation Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliation Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>